# mandelbrot

./: Cargo.toml  README.md  app.py  pyproject.toml
src/: lib.rs
